<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.teragam</groupId>
    <artifactId>jfxshader</artifactId>
    <version>1.1.0</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>19</javafx.version>
        <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
        <codehaus.exec.plugin.version>3.1.0</codehaus.exec.plugin.version>
    </properties>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/Teragam/JFXShader</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-h</arg>
                        <arg>${project.build.directory}/generated-headers</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.effect=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.geom=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.geom.transform=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.scenario.effect.impl.state=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.scenario.effect=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.prism=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.prism.impl=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.scenario.effect.impl.prism=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.prism.ps=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.glass.ui=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.glass.utils=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene.shape=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.sg.prism=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.util=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.prism.impl.ps=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.scenario.effect.impl=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.prism.es2=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.scenario.effect.impl.prism.ps=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.prism.d3d=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene.paint=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.tk=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.beans.event=de.teragam.jfxshader</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.base/com.sun.javafx=de.teragam.jfxshader</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${codehaus.exec.plugin.version}</version>
                    <executions>
                        <execution>
                            <id>exec</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>exec</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <executable>make</executable>
                        <arguments>
                            <argument>JAVA_HOME=${java.home}</argument>
                        </arguments>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>build-natives-win</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <scope>provided</scope>
            <classifier>win</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <scope>provided</scope>
            <classifier>linux</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <scope>provided</scope>
            <classifier>mac</classifier>
        </dependency>
    </dependencies>

</project>